@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.3.0
 
+        - changed widget coordinates to 32 bit
         - added support for shortcuts for Fl_Input_,
 	  Fl_Value_Input, and Fl_Text_Display derived
           widgets (STR #1770)
